fix: Link video player in commerce. Update heading to be font-size 28px on mobile commerce

--- a/.storybook/themes/commerce.scss
+++ b/.storybook/themes/commerce.scss
@@ -818,7 +818,7 @@
 					gap: var(--global-spacing-3),
 					components: (
 						heading: (
-							font-size: var(--global-font-size-9),
+							font-size: var(--global-font-size-10),
 							line-height: var(--global-line-height-5),
 						),
 						media-item: (
@@ -1018,3 +1018,4 @@
 @use "../../blocks/single-column-layout-block";
 @use "../../blocks/right-rail-block";
 @use "../../blocks/right-rail-advanced-block";
+@use "../../blocks/video-player-block";
